# wovi2

./: CMakeLists.txt  README.md  devlog.txt  viewer.html
models/: alubeam.glb  alupillar.glb  aluprofile.blend  aluprofile.blend1  cube.glb  cylinder.glb  ico.glb  lightsaber.glb  pommesgabel.blend  pommesgabel.blend1  sphere.glb
models/ur5e/: forearm.ascii.stl  shoulder.ascii.stl  upperarm.ascii.stl  wrist1.ascii.stl  wrist2.ascii.stl
models_/: alubeam_highlight.glb  column.glb  fundament.glb  pommesgabel.glb
scenes/: big_test_scene.json  demo_scene.json  demo_scene_motion.json  maze_request.json  maze_scene.json  maze_solved.json  pommes_request.json  pommesgabel.json  presy_scene.json  robot_with_pillars.json  robot_with_sword.json  simple_test_scene.json  single_robot.json  single_robot_with_saber.json  test_output.json  test_request.json  test_request_constraints.json  ur5e_cage.json  ur5e_cage_request_sampling.json  ur5e_cage_request_sweeping.json  ur5e_cage_request_video.json  ur5e_cage_visual.json  ur5e_kitchen.json  ur5e_kitchen2.json  ur5e_kitchen_request.json  ur5e_kitchen_visual.json  waving_robot.json
shed/: msr_ik_time.cpp
src/: main.cpp  node_simple.h  sweepingshape.h  sweepingtransform.h  transform.h  workspaceworker.hpp
src/collision/: collisionchecker.cpp  collisionchecker.h
src/collision/shapes/: allshapes.h  boxshape.cpp  boxshape.h  compoundshape.cpp  compoundshape.h  concaveshape.cpp  concaveshape.h  cylinderzshape.cpp  cylinderzshape.h  inflatedconvexhullshape.cpp  inflatedconvexhullshape.h  linkingcompoundshape.cpp  linkingcompoundshape.h  shape.cpp  shape.h  sphereshape.cpp  sphereshape.h  visualmeshshape.cpp  visualmeshshape.h
src/export/: checkertojson.h  shapestojson.cpp  shapestojson.h
src/interface/: planningrequest.cpp  planningrequest.h
src/interface/preprocessor/: canonicalscene.h  converter.h
src/kinematics/: joints.h  trafo.h
src/kinematics/ur/: urkin.cpp  urkin.h
src/kite/: collisionobject.h  node_sweeping.h_  scenegraph.h
src/kite/interface/: apiscene.h  sceneio.cpp  sceneio.h
src/kite/interface/preprocessor/: check.h  converter.cpp  linalg.h
src/old/: planner_headers.h
src/old/render/html/: renderer.html.h  urdemo.js
src/scenegraph/: collisionignoregroup.hpp  collisionrobot.cpp  collisionrobot.h  multibody.h  scene.cpp  scene.h  spawn.cpp  spawn.h
src/urdf/: urdf.h  urdftypes.h
src/utils/: bitmask.h  divideandconquershuffle.h  fileio.h  observer.h  polyroots.h  profiling.h  stl.h  str.h  tracer.h  valarraytools.h
